Upload the links

--- a/Day_1/Code/Day 1.html
+++ b/Day_1/Code/Day 1.html
@@ -3,13 +3,13 @@
 	<title> HTML </title>
 </head>
 <body bgcolor="Orange">
-	<center><img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Asset\Image\HTML 1 To 5.jpeg" alt="No Image" height="400px" width= "600px"></center>
+	<center><img src="F:\HTML-REPO\HTML-REPO\Day_1\Asset\Image\HTML 1 To 5.jpeg" alt="No Image" height="400px" width= "600px"></center>
 	<center><h1>HTML</h1></center>
 	<p> The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. <br> It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript. <br>
 	Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.<br> HTML describes the structure of a web page semantically and originally included cues for its appearance.</p>
 <hr>
 	<h2>History <br> Development</h2>
-	<marquee><img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Asset\Image\he is the creater of HTML.jpg" alt="No Image" height="200px" width= "400px"></marquee>
+	<marquee><img src="F:\HTML-REPO\HTML-REPO\Day_1\Asset\Image\he is the creater of HTML.jpg" alt="No Image" height="200px" width= "400px"></marquee>
 	<p> In 1980, <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee" target="-_blank">physicist Tim Berners-Lee </a>, a contractor at CERN, proposed and prototyped <a href="https://en.wikipedia.org/wiki/ENQUIRE" target="-_blank">ENQUIRE</a>, a system for CERN researchers to use and share documents.<br> In 1989, Berners-Lee wrote a memo proposing an Internet-based hypertext system.<br> Berners-Lee specified HTML and wrote the browser and server software in late 1990.<br> That year, Berners-Lee and CERN data systems engineer Robert Cailliau collaborated on a joint request for funding, but the project was not formally adopted by CERN.<br> In his personal notes of 1990, Berners-Lee listed "some of the many areas in which hypertext is used"; an encyclopedia is the first entry.<br>
 	The first publicly available description of HTML was a document called "HTML Tags" first mentioned on the Internet by Tim Berners-Lee in late 1991.<br> It describes 18 elements comprising the initial, relatively simple design of HTML.<br> Except for the hyperlink tag, these were strongly influenced by SGMLguid, an in-house Standard Generalized Markup Language (SGML)-based documentation format at CERN.<br> Eleven of these elements still exist in HTML 4</p>
 <hr>
