--- a/Day_2/Resume_of_Rakesh.html
+++ b/Day_2/Resume_of_Rakesh.html
@@ -17,7 +17,7 @@
 	</nav>
 	
 	<figure>
-		<center><img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\PSX_20220602_140617.jpg" alter="Rakesh Photo" height="225px" width= "200px"></center>
+		<center><img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\PSX_20220602_140617.jpg" alter="Rakesh Photo" height="225px" width= "200px"></center>
 	</figure>
 	<center><figcaption>Rakesh TN</figcaption></center>
 	
@@ -58,12 +58,12 @@
 				<p><img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-gmail-50.png"> rakeshtn36@gmail.com </p><br>
 		</details>
 		<footer>
-			<center><a href="https://github.com/Rakesh-TN" target="-_blank"> <img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-github-50.png"> </a> 
-				<a href="https://twitter.com/RakeshTN882549" target="-_blank"> <img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-twitter-60.png" height="50px" width="50px"> </a> 
-				<a href="https://www.linkedin.com/in/rakesh-t-n-154510191" target="-_blank"> <img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-linkedin-50.png"> </a>
-				<a href="https://stackoverflow.com/users/22027529/rakesh-tn" target="-_blank"> <img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-stack-overflow-50.png"> </a>
-				<a href="https://medium.com/@rakeshtn36" target="-_blank"> <img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-medium-50.png"> </a>
-				<a href="https://dribbble.com/Rakesh_UI_UX" target="-_blank"> <img src="C:\Users\tnrak\OneDrive\Desktop\Project_in_HTML\Day_2\Asset\icons8-dribbble-50.png"> </a>
+			<center><a href="https://github.com/Rakesh-TN" target="-_blank"> <img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\\icons8-github-50.png"> </a> 
+				<a href="https://twitter.com/RakeshTN882549" target="-_blank"> <img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\\icons8-twitter-60.png" height="50px" width="50px"> </a> 
+				<a href="https://www.linkedin.com/in/rakesh-t-n-154510191" target="-_blank"> <img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\icons8-linkedin-50.png"> </a>
+				<a href="https://stackoverflow.com/users/22027529/rakesh-tn" target="-_blank"> <img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\\icons8-stack-overflow-50.png"> </a>
+				<a href="https://medium.com/@rakeshtn36" target="-_blank"> <img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\\icons8-medium-50.png"> </a>
+				<a href="https://dribbble.com/Rakesh_UI_UX" target="-_blank"> <img src="F:\HTML-REPO\HTML-REPO\Day_2\Asset\\icons8-dribbble-50.png"> </a>
 			</center>
 		</footer>
 </body>
